--- a/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -6,16 +6,88 @@
 <div class="grid">
 
     <div class="lg:col-6 md:col-6 sm:col-12 col-12">
-        <p-fieldset legend="i18nSelect Pipe"
-                    [toggleable]="true">
-            Saludos {{nombre}}, es un placer {{ genero | i18nSelect:invitacioMapa}} a nuestro evento.
+        <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+            <p>
+                Saludos {{nombre}}, es un placer 
+                {{ genero | i18nSelect:invitacioMapa}} 
+                a nuestro evento.
+            </p>
+            <button pButton
+                    (click)="cambiarPersona()"
+                    type="button"
+                    label="Cambiar Persona"
+                    class="p-button-help p-button-outlined">
+            </button>
         </p-fieldset> 
     </div>
 
     <div class="lg:col-6 md:col-6 sm:col-12 col-12">
-        <p-fieldset legend="i18nPlural Pipe"
-                    [toggleable]="true">
-            Content
+        <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+            <p>
+                Actualmente {{clientes.length | i18nPlural:clientesMapa}}.
+            </p>
+            <button pButton
+                    (click)="borrarCliente()"
+                    type="button"
+                    label="Borrar cliente"
+                    class="p-button-danger p-button-outlined">
+            </button>
+        </p-fieldset> 
+    </div>
+
+    <div class="lg:col-6 md:col-6 sm:col-12 col-12">
+        <p-fieldset legend="Slice Pipe" [toggleable]="true">
+
+            <b>Original</b>
+            <pre>{{ clientes }}</pre>
+
+            <b>slice:0:2</b>
+            <pre>{{ clientes |slice:0:2 }}</pre>
+
+            <b>slice:1:2</b>
+            <pre>{{ clientes |slice:1:2 }}</pre>
+
+            <b>slice:1:3</b>
+            <pre>{{ clientes |slice:1:3 }}</pre>
+
+            <b>slice:3:4</b>
+            <pre>{{ clientes |slice:3:4 }}</pre>
+
+            <b>slice:3:4</b>
+            <pre>{{ nombre |slice:0:4 }}</pre>
+
+
+        </p-fieldset> 
+    </div>
+
+    <div class="lg:col-6 md:col-6 sm:col-12 col-12">
+        <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+
+        <pre>{{ heroes | json }}</pre>
+
+        </p-fieldset> 
+    </div>
+
+    <div class="lg:col-6 md:col-6 sm:col-12 col-12">
+        <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+
+            <ul>
+                <li *ngFor="let item of persona | keyvalue">
+                    <b>{{item.key}}</b>: {{item.value}}
+                </li>
+            </ul>
+
+        </p-fieldset> 
+    </div>
+
+    <div class="lg:col-6 md:col-6 sm:col-12 col-12">
+        <p-fieldset legend="Async Pipe" [toggleable]="true">
+
+          <pre *ngIf="!(miObservable | async)">Resolviendo observable</pre>
+          <pre>{{miObservable | async}}</pre>
+          <pre *ngIf="!(valorPromesa | async)">Resolviendo promesa</pre>
+          <pre>{{valorPromesa | async}}</pre>
+
         </p-fieldset> 
     </div>
 
